Data Access: Implemented customer insert, get, and search